--- a/styles/header.css
+++ b/styles/header.css
@@ -25,6 +25,8 @@ header {
 
 .navToggle-label:hover {
   cursor: pointer;
+  max-height: 500px;
+  transition: max-height 0.25s ease-in;
 }
 
 .navToggle {
@@ -70,6 +72,11 @@ nav a {
   text-decoration: none;
   background-color: #3d3d3d;
   color: #fff;
+  margin-left: -40px;
+}
+
+li a:hover {
+  background-color: black;
 }
 
 nav {
@@ -78,7 +85,10 @@ nav {
   position: absolute;
   top: 0%;
   width: 100%;
+  max-height: 500px;
+  transition: max-height 0.25s ease-in;
 }
+
 .current {
   font-weight: bold;
 }
@@ -105,6 +115,7 @@ ul {
     font-size: 24px;
     display: inline;
     margin-right: 20px;
+    margin-left: 0px;
   }
 
   li {
@@ -113,5 +124,8 @@ ul {
 
   header {
     height: 90px;
+  }
+  li a:hover {
+    background-color: #3d3d3d;
   }
 }
