--- a/styles/contact.css
+++ b/styles/contact.css
@@ -46,6 +46,7 @@ p {
   color: #3d3d3d;
   font-size: 16px;
   font-weight: bold;
+  margin-bottom: 1%;
 }
 
 .formError {
@@ -59,9 +60,14 @@ button {
   margin-bottom: 15%;
   font-size: 14px;
   width: 150px;
-  width: 30%;
-  margin-left: 59%;
+  width: 35%;
+  margin-left: 54%;
   height: 30px;
+  border: solid 1px #3d3d3d;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
