--- a/styles/contact.css
+++ b/styles/contact.css
@@ -39,6 +39,7 @@ textarea {
   font-size: 16px;
   text-align: center;
   color: green;
+  display: none;
 }
 
 p {
@@ -53,6 +54,7 @@ p {
   color: red;
   margin-left: 9%;
   font-size: 14px;
+  display: none;
 }
 
 button {
