--- a/styles/index.css
+++ b/styles/index.css
@@ -58,6 +58,7 @@ img {
     text-align: center;
     margin-top: 10%;
     margin-bottom: 30px;
+    text-decoration: underline;
   }
   .arrow {
     font-size: 70px;
