--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,8 @@ header {
   margin-top: 10px;
   font-size: 20px;
   text-align: center;
-  width: 100%;
+  width: 40%;
+  margin-left: 30%;
 }
 
 .navToggle:checked ~ nav {
@@ -104,7 +105,7 @@ ul {
     margin-top: 18px;
     text-align: left;
     margin-left: 3%;
-    width: 40%;
+    width: auto;
   }
   .navToggle-label {
     display: none;
