--- a/styles/blog.css
+++ b/styles/blog.css
@@ -54,6 +54,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  color: #3d3d3d;
+}
+
 @media screen and (min-width: 768px) {
   h1 {
     font-size: 30px;
