--- a/styles/blog.css
+++ b/styles/blog.css
@@ -56,6 +56,18 @@ a {
 
 button {
   color: #3d3d3d;
+  font-size: 14px;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  font-weight: bold;
+  width: 30%;
+  height: 35px;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -98,5 +110,11 @@ button {
 
   .readMore {
     font-size: 18px;
+  }
+
+  button {
+    font-size: 24px;
+    width: 10%;
+    margin-left: 70%;
   }
 }
