--- a/styles/blog.css
+++ b/styles/blog.css
@@ -55,7 +55,7 @@ a {
 }
 
 button {
-  color: #3d3d3d;
+  color: #fff;
   font-size: 14px;
   margin-top: 2%;
   margin-bottom: 5%;
@@ -64,6 +64,12 @@ button {
   height: 35px;
   margin-left: 35%;
   margin-right: 35%;
+  border: none;
+  background-color: #3d3d3d;
+}
+
+button:hover {
+  opacity: 0.9;
 }
 
 button:hover {
@@ -116,5 +122,6 @@ button:hover {
     font-size: 24px;
     width: 10%;
     margin-left: 70%;
+    height: 50px;
   }
 }
