--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,7 @@ body {
 h1 {
   color: #fff;
   text-align: center;
+  font-size: 18px;
 }
 
 img {
@@ -24,12 +25,61 @@ img {
 
 .blogContainer {
   display: grid;
+  grid-template-columns: 1fr 10fr 1fr;
+  height: 400px;
+}
+
+.blogCards {
+  display: grid;
   grid-template-columns: 1fr;
+  width: 70%;
+  height: 100%;
+  margin-left: 15%;
 }
 
 .latestBlog {
   background-color: #fff;
   height: 100%;
+}
+
+.arrow {
+  font-size: 40px;
+  color: white;
+  margin: auto;
+}
+
+#leftArrow {
+  margin-left: 15px;
+}
+
+#rightArrow {
+  margin-right: 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.arrow:hover {
+  cursor: pointer;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 14px;
+  text-align: center;
+  color: #3d3d3d;
+}
+
+p {
+  text-align: center;
+  margin-bottom: 30px;
+  text-decoration: underline;
+  color: #3d3d3d;
+}
+
+.latestBlog {
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -38,12 +88,31 @@ img {
   }
 
   .blogContainer {
-    grid-template-columns: 0.5fr 5fr 5fr 5fr 0.5fr;
+    grid-template-columns: 1fr 5fr 1fr;
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
     grid-column-gap: 40px;
-    max-width: 1300px;
+    max-width: 1600px;
+    margin-bottom: 200px;
+    height: 50vh;
+  }
+
+  .blogCards {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 40px;
+    height: 100%;
+    margin-left: 0%;
+  }
+
+  .latestBlog {
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 30px;
   }
 
   h2 {
@@ -52,13 +121,15 @@ img {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 10%;
+    text-align: center;
+    color: #3d3d3d;
   }
 
   p {
     text-align: center;
-    margin-top: 10%;
     margin-bottom: 30px;
     text-decoration: underline;
+    color: #3d3d3d;
   }
   .arrow {
     font-size: 70px;
@@ -66,7 +137,17 @@ img {
     position: relative;
     margin: auto;
   }
+
+  .arrow:hover {
+    cursor: pointer;
+  }
+
   #leftArrow {
-    text-align: right;
+    width: 100%;
+    margin-left: 50px;
+  }
+
+  #rightArrow {
+    margin-right: 50px;
   }
 }
