--- a/styles/article.css
+++ b/styles/article.css
@@ -9,6 +9,7 @@ img {
   height: auto;
   display: block;
   margin: auto;
+  margin-top: 3%;
 }
 
 img:hover {
@@ -102,9 +103,32 @@ img:hover {
   opacity: 0.9;
 }
 
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 50%;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .blogPost {
-    max-width: 900px;
+    max-width: 800px;
   }
 
   h1 {
@@ -148,5 +172,14 @@ img:hover {
     margin-left: 20%;
     text-align: left;
     max-width: 60%;
+  }
+
+  .loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #3498db;
+    width: 60px;
+    height: 60px;
+    margin-top: 10%;
+    margin-left: 5%;
   }
 }
