--- a/styles/blog.css
+++ b/styles/blog.css
@@ -54,6 +54,29 @@ a {
   text-decoration: none;
 }
 
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 50%;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 button {
   color: #fff;
   font-size: 14px;
@@ -118,10 +141,20 @@ button:hover {
     font-size: 18px;
   }
 
+  .loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #3498db;
+    width: 60px;
+    height: 60px;
+    margin-top: 5%;
+    margin-left: 5%;
+  }
+
   button {
     font-size: 24px;
-    width: 10%;
-    margin-left: 70%;
+    width: 20%;
     height: 50px;
+    margin-right: 40%;
+    margin-left: 40%;
   }
 }
