--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,21 @@
+body {
+  background: url(../images/backround1.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 1000px;
+}
+
 main {
-  width: 98%;
+  width: 80%;
   margin-bottom: 40px;
+  margin-left: 10%;
+  background-color: #fff;
+  padding-bottom: 5%;
+  margin-top: 4%;
+  padding-top: 1%;
+  border-radius: 1%;
 }
 
 h1 {
@@ -10,17 +25,37 @@ h1 {
 }
 
 img {
-  width: 90%;
+  width: 80%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 p {
-  width: 90%;
-  margin-left: 5%;
+  width: 80%;
+  margin-left: 10%;
   color: #3d3d3d;
   font-size: 12px;
+}
+
+.contactButton {
+  color: #fff;
+  background-color: #3d3d3d;
+  text-decoration: none;
+  font-size: 16px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  text-align: center;
+  margin-top: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-radius: 1%;
+}
+
+.contactButton:hover {
+  opacity: 0.9;
 }
 
 @media screen and (min-width: 768px) {
@@ -28,15 +63,25 @@ p {
     max-width: 1000px;
     display: block;
     margin: auto;
+    padding-bottom: 1%;
   }
 
   h1 {
     font-size: 30px;
     text-align: left;
-    margin-left: 5%;
+    margin-left: 10%;
+    margin-top: 0%;
   }
 
   p {
+    font-size: 16px;
+  }
+
+  .contactButton {
     font-size: 20px;
+    margin-top: 1%;
+    width: 20%;
+    padding-top: 1%;
+    padding-bottom: 1%;
   }
 }
