--- a/styles/contact.css
+++ b/styles/contact.css
@@ -12,6 +12,7 @@ body {
   max-width: 80%;
   margin: auto;
   margin-top: 15%;
+  border-radius: 1%;
 }
 
 h1 {
@@ -71,6 +72,7 @@ button {
 
 button:hover {
   cursor: pointer;
+  opacity: 0.9;
 }
 
 @media screen and (min-width: 768px) {
