--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,7 @@ body {
 h1 {
   color: #fff;
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 img {
@@ -27,7 +27,7 @@ img {
 .blogContainer {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
-  height: 32vh;
+  height: 40vh;
   margin-top: 20px;
 }
 
@@ -37,6 +37,10 @@ img {
   width: 90%;
   height: 100%;
   margin-left: 5%;
+}
+
+.latestBlog:hover {
+  opacity: 0.7;
 }
 
 .latestBlog {
@@ -68,7 +72,7 @@ a {
 
 h2 {
   font-weight: normal;
-  font-size: 14px;
+  font-size: 18px;
   text-align: center;
   color: #3d3d3d;
 }
@@ -77,7 +81,7 @@ p {
   text-align: center;
   text-decoration: underline;
   color: #3d3d3d;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .latestBlog {
