--- a/styles/article.css
+++ b/styles/article.css
@@ -158,11 +158,11 @@ img:hover {
   .modalImg img {
     width: 60%;
     height: auto;
-    margin-top: 45px;
+    margin-top: 10px;
   }
 
   .closeModal {
-    top: 2%;
+    top: 0;
     right: 17%;
     font-size: 40px;
   }
