--- a/styles/about.css
+++ b/styles/about.css
@@ -60,10 +60,11 @@ p {
 
 @media screen and (min-width: 768px) {
   main {
-    max-width: 1000px;
+    max-width: 800px;
     display: block;
     margin: auto;
     padding-bottom: 1%;
+    margin-top: 2%;
   }
 
   h1 {
@@ -79,7 +80,8 @@ p {
 
   .contactButton {
     font-size: 20px;
-    margin-top: 1%;
+    margin-top: 4%;
+    margin-bottom: 4%;
     width: 20%;
     padding-top: 1%;
     padding-bottom: 1%;
