--- a/styles/about.css
+++ b/styles/about.css
@@ -13,7 +13,7 @@ main {
   margin-left: 10%;
   background-color: #fff;
   padding-bottom: 5%;
-  margin-top: 4%;
+  margin-top: 15%;
   padding-top: 1%;
   border-radius: 1%;
 }
@@ -29,6 +29,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: solid #3d3d3d 1px;
 }
 
 p {
@@ -64,7 +65,7 @@ p {
     display: block;
     margin: auto;
     padding-bottom: 1%;
-    margin-top: 2%;
+    margin-top: 5%;
   }
 
   h1 {
